adds lobby voice, enhanced bot brain
